--- a/v2/WebContent/WEB-INF/web.xml
+++ b/v2/WebContent/WEB-INF/web.xml
@@ -55,7 +55,7 @@
   <servlet-mapping>
     <servlet-name>PostServiceRequest</servlet-name>
     <url-pattern>/Post</url-pattern>
-    <url-pattern>/requests.xml</url-pattern>
+    <url-pattern>/POST</url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
